fix(review): change the logic of asserting two lists